# anki-server-deploy

./: .gitignore  Cargo.toml  README.md  build.rs  build_windows.bat
send/: Cargo.toml
send/src/: error.rs  lib.rs  logic.rs
src/: error.rs  lib.rs  main.rs
uninstall/: Cargo.toml  build.rs
uninstall/src/: lib.rs  press.c
updateaddr/: Cargo.toml
updateaddr/src/: error.rs  lib.rs
