[package]
name = "ankiserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ankisyncd={path="anki-sync-server-rs/",features = ["account"] }
updateaddr={path="updateaddr"}
actix-web = "4.0.1"   
clap = { version = "3.1.3", features = ["cargo"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"