[package]
name = "ankiserver"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
ankisyncd={path="anki-sync-server-rs/",features = ["account"] }
updateaddr={path="updateaddr"}
send={path="send"}
actix-web = "4.0.1"   
clap = { version = "3.1.3", features = ["cargo"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.32"

[dependencies.windows]
version = "0.39.0"
features = [
    "Win32_UI_Shell",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
]

[build-dependencies]
winres = "0.1"